--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -196,7 +196,7 @@
                 </div>
             </div>
             <div class="col-lg-6">
-                <img class="img-responsive" src="pic2.png" style="margin-top: -100px" alt="">
+                <img class="img-responsive" src="pic2.png" alt="Mon Met'">
             </div>
 
         </div>
