--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -156,6 +156,11 @@
             font-weight: 300;
             letter-spacing: 1px;
         }
+
+        a.disabled {
+            pointer-events: none;
+            cursor: default;
+        }
     </style>
 </head>
 
@@ -189,10 +194,12 @@
                 <h1>Mon Met', mon compagnon du réseau Met'.</h1>
 
                 <div style="text-align: center">
-                    <a class="btn btn-lg" style="color: #ecf0f1; background-color: #95a5a6; margin: 20px"><i
+                    <a class="btn btn-lg disabled" style="color: #ecf0f1; background-color: #95a5a6; margin: 20px"  title="A venir..."><i
                             class="fa fa-apple" style="color: #ecf0f1"></i> Apple Store</a>
-                    <a class="btn btn-lg" style="color: #ecf0f1; background-color: #95a5a6; margin: 20px"><i
-                            class="fa fa-google" style="color: #ecf0f1"></i> Goole Play</a></p>
+                    <a class="btn btn-lg disabled" style="color: #ecf0f1; background-color: #95a5a6; margin: 20px"  title="A venir..."><i
+                            class="fa fa-google" style="color: #ecf0f1"></i> Goole Play</a>
+                    <br/>
+                    <span style="color: ghostwhite">A venir...</span>
                 </div>
             </div>
             <div class="col-lg-6">
@@ -219,10 +226,9 @@
             <i class="fa fa-download" style="font-size: 11em; color: #2980b9; text-shadow: 1px 1px 1px gray"></i>
             <h4>1 - Téléchargez l'application</h4>
 
-            <p>Téléchargez l'application sur votre store.<br/>
-                <a type="submit" class="btn btn-lg" style="color: #ecf0f1; background-color: #2c3e50"><i
+                <a type="submit" class="btn btn-lg disabled" style="color: #ecf0f1; background-color: #2c3e50" title="A venir..."><i
                         class="fa fa-apple" style="color: #ecf0f1"></i> Apple Store</a>
-                <a type="submit" class="btn btn-lg" style="color: #ecf0f1; background-color: #2c3e50"><i
+                <a type="submit" class="btn btn-lg disabled" style="color: #ecf0f1; background-color: #2c3e50" title="A venir..."><i
                         class="fa fa-google" style="color: #ecf0f1"></i> Goole Play</a></p>
         </div>
 
